--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
             <strong>Walmart Global Tech</strong> — Dallas, TX<br/>
             Data Scientist — Mar. 2024 - present<br/>
             <ul>
+                <li>Manager: <a href="https://medium.com/@georgechen99_dsml">George Chen</a></li>
+                <li>Implemented parallel framework for daily forecasting.</li>
             </ul>
         </div>
 
@@ -127,8 +129,8 @@
             <ul>
                 <li>Manager: <a href="https://inside.mines.edu/~bwu/">Dr. Bo Wu</a></li>
                 <li>Implemented Graph Neural Networks algorithms and infrastructure.</li>
-                <li>Developed distributed fullneighbor subgraph sampler and exported subgraphs for the use with PyG and DGL.</li>
-                <li>Created end-to-end machine learning pipelines of data analysis on Katana's distributed Graph AI platform.</li>
+                <li>Developed distributed fullneighbor subgraph sampler for the use with PyG and DGL.</li>
+                <li>Created end-to-end ML pipelines on Katana's distributed Graph AI platform.</li>
                 <li>Updated PyTorch conda package to work with Katana environment.</li>
                 <li>Built a UI prototype for Katana's Graph AI platform.</li>
                 <li>Tested Katana's AI libraries and filed bug reports for fix.</li>
@@ -140,7 +142,7 @@
             Postdoctoral Scholar, the Advanced Light Source — Sept. 2019 - Sept. 2021<br/>
             <ul>
                 <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
-                <li>Improved multi-objective genetic algorithm for Lattice Optimization using Deep Learning.</li>
+                <li>Improved algorithm for Lattice Optimization using Deep Learning.</li>
                 <li>Achieved orders of magnitude speedup on HPC clusters.</li>
             </ul>
         </div>
@@ -150,14 +152,14 @@
             Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center — Oct. 2017 - Aug. 2019<br/>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
-                <li>Radar data (NEXRAD, ARM CSAPR) classification using convolutional neural networks.</li>
-                <li>Detected outliers in streaming time series data from ARM distributed sensors.</li>
+                <li>Radar data classification using convolutional neural networks.</li>
+                <li>Detected outliers in streaming time series radar data.</li>
             </ul>
             Research Intern, the Scientific Data Group — Summer 2016, 2017<br/>
             <ul>
                 <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">Dr. George Ostrouchov</a></li>
-                <li>Scaling a PheWAS logistic regression R code on HPC clusters with pbdR tools using singularity container, 2017.</li>
-                <li>Implemented an R package <a href="https://github.com/YupingLu/pbdADIOS">pbdADIOS</a> to connect R with ADIOS parallel middleware for I/O, 2016.</li>
+                <li>Developed pbdR tools for singularity container.</li>
+                <li>Implemented an R package <a href="https://github.com/YupingLu/pbdADIOS">pbdADIOS</a> to connect R with ADIOS.</li>
                 <li>Most functions in this package are implemented with C++.</li>
             </ul>
         </div>
@@ -173,7 +175,7 @@
             Graduate Research Assistant, Dr. Michael A. Langston’s lab — Aug. 2013 - July 2014<br/>
             <ul>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
-                <li>Developed <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built on the <a href="https://usegalaxy.org/">Galaxy</a> framework (Python) for graph-based tools.</li>
+                <li>Upgraded <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built for graph theoretical tools.</li>
             </ul>
         </div>
 
@@ -448,7 +450,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-03-09</p>
+            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-04-20</p>
         </div>
     </div>
 
