Comment out manager

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <strong>Walmart Global Tech</strong> — Dallas, TX<br/>
             Data Scientist — Mar. 2024 - present<br/>
             <ul>
-                <li>Manager: <a href="https://medium.com/@georgechen99_dsml">George Chen</a></li>
+                <!--<li>Manager: <a href="https://medium.com/@georgechen99_dsml">George Chen</a></li>-->
                 <li>Implemented parallel framework for daily forecasting.</li>
             </ul>
         </div>
