--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <img src="/img/yupinglu.jpg" class="img-thumbnail" alt="Yuping Lu">
                 <br/>
                 <br/>
-                <p class="text-justify">
+                <p class="text-justify" id="moto">
                     <em>Ages ago, in another city, on another bus, I sat so at the windows, looking outward, investing for each flying face which trapped my brief attention some life, some destiny, 
                     in which I played a part.</em>
                 </p>
