Update default website width

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="/css/latofonts.css" rel="stylesheet" type="text/css">
     <link href="/css/latolatinfonts.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
+    <link rel="shortcut icon" href="https://www.utk.edu/images/favicons/favicon.ico">
     <!--<link href="/css/index.css" rel="stylesheet">-->
     <script type="text/javascript"> 
         function loadcss(url) {
