--- a/index.html
+++ b/index.html
@@ -71,15 +71,14 @@
             <div class="col-sm-8 col-md-8">
                 <h3 id="education">Education</h3>
 
-                <h5 id="university-of-tennessee"><a href="http://www.utk.edu"><strong>University of Tennessee, Knoxville</strong></a></h5>
+                <h4 id="university-of-tennessee"><a href="http://www.utk.edu"><strong>University of Tennessee, Knoxville</strong></a></h4>
                 <ul>
                     <li>Research Interests: Machine Learning | Graph Algorithm | Bioinformatics</li> 
                     <li>PhD in Computer Science (August 2019) | GPA: 3.91</li>
                     <li>Advisor: Dr. Michael A. Langston</li>
-                    <li><a href="http://yupinglu.me/dissertation/">Dissertation</a></li>
                 </ul>
 
-                <h5 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/"><strong>Nanjing Agricultural University</strong></a></h5>
+                <h4 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/"><strong>Nanjing Agricultural University</strong></a></h4>
                 <ul>
                     <li>BEng in Computer Science (May 2011) | GPA: 3.64</li>
                     <li>Advisor: Dr. Huanliang Xu</li>
@@ -115,17 +114,14 @@
 
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
-            <strong>Walmart Global Tech</strong> — Dallas, TX<br/>
-            Data Scientist — Mar. 2024 - present<br/>
+            <strong>Data Scientist at Walmart Global Tech</strong> Dallas, TX — Mar. 2024 - present<br/>
             <ul>
-                <!--<li>Manager: <a href="https://medium.com/@georgechen99_dsml">George Chen</a></li>-->
                 <li>Implemented parallel framework for daily forecasting.</li>
             </ul>
         </div>
 
         <div>
-            <strong>Katana Graph</strong> — Lakewood, CO<br/>
-            Machine Learning Engineer, graph AI platform team — Oct. 2021 - Jun. 2023<br/>
+            <strong>Machine Learning Engineer at Katana Graph</strong> Lakewood, CO — Oct. 2021 - Jun. 2023<br/>
             <ul>
                 <li>Manager: <a href="https://inside.mines.edu/~bwu/">Dr. Bo Wu</a></li>
                 <li>Implemented Graph Neural Networks algorithms and infrastructure.</li>
@@ -138,8 +134,7 @@
         </div>
         
         <div>
-            <strong>Lawrence Berkeley National Laboratory</strong> — Berkeley, CA<br/>
-            Postdoctoral Scholar, the Advanced Light Source — Sept. 2019 - Sept. 2021<br/>
+            <strong>Postdoctoral Scholar at Berkeley Lab</strong> Berkeley, CA — Sept. 2019 - Sept. 2021<br/>
             <ul>
                 <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
                 <li>Improved algorithm for Lattice Optimization using Deep Learning.</li>
@@ -148,7 +143,7 @@
         </div>
 
         <div>
-            <strong>Oak Ridge National Laboratory</strong> — Oak Ridge, TN<br/>
+            <strong>Oak Ridge National Laboratory</strong> Oak Ridge, TN<br/>
             Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center — Oct. 2017 - Aug. 2019<br/>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
@@ -165,7 +160,7 @@
         </div>
         
         <div>
-            <strong>University of Tennessee, Knoxville</strong> — Knoxville, TN<br/>
+            <strong>University of Tennessee, Knoxville</strong> Knoxville, TN<br/>
             Graduate Research Assistant, the Office of Information Technology — July 2014 - Oct. 2017<br/>
             <ul>
                 <li>University web server configuration and optimization.</li>
