--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
 
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
-            <strong>Data Scientist at Walmart Global Tech</strong> Dallas, TX — Mar. 2024 - present<br/>
+            <strong>Data Scientist at Walmart Global Tech</strong> - Dallas, TX [Mar. 2024 ~ present]<br/>
             <ul>
                 <li>Implemented parallel framework for daily forecasting.</li>
             </ul>
         </div>
 
         <div>
-            <strong>Machine Learning Engineer at Katana Graph</strong> Lakewood, CO — Oct. 2021 - Jun. 2023<br/>
+            <strong>Machine Learning Engineer at Katana Graph</strong> - Lakewood, CO [Oct. 2021 ~ Jun. 2023]<br/>
             <ul>
                 <li>Manager: <a href="https://inside.mines.edu/~bwu/">Dr. Bo Wu</a></li>
                 <li>Implemented Graph Neural Networks algorithms and infrastructure.</li>
@@ -134,7 +134,7 @@
         </div>
         
         <div>
-            <strong>Postdoctoral Scholar at Berkeley Lab</strong> Berkeley, CA — Sept. 2019 - Sept. 2021<br/>
+            <strong>Postdoctoral Scholar at Berkeley Lab</strong> - Berkeley, CA [Sept. 2019 ~ Sept. 2021]<br/>
             <ul>
                 <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
                 <li>Improved algorithm for Lattice Optimization using Deep Learning.</li>
@@ -143,8 +143,8 @@
         </div>
 
         <div>
-            <strong>Oak Ridge National Laboratory</strong> Oak Ridge, TN<br/>
-            Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center — Oct. 2017 - Aug. 2019<br/>
+            <strong>Oak Ridge National Laboratory</strong> - Oak Ridge, TN<br/>
+            Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center — [Oct. 2017 ~ Aug. 2019]<br/>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
                 <li>Radar data classification using convolutional neural networks.</li>
@@ -155,19 +155,18 @@
                 <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">Dr. George Ostrouchov</a></li>
                 <li>Developed pbdR tools for singularity container.</li>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/pbdADIOS">pbdADIOS</a> to connect R with ADIOS.</li>
-                <li>Most functions in this package are implemented with C++.</li>
             </ul>
         </div>
         
         <div>
-            <strong>University of Tennessee, Knoxville</strong> Knoxville, TN<br/>
-            Graduate Research Assistant, the Office of Information Technology — July 2014 - Oct. 2017<br/>
+            <strong>University of Tennessee, Knoxville</strong> - Knoxville, TN<br/>
+            Graduate Research Assistant, the Office of Information Technology — [July 2014 ~ Oct. 2017]<br/>
             <ul>
                 <li>University web server configuration and optimization.</li>
                 <li>Google Search Appliance administration and implementation.</li>
             </ul>
 
-            Graduate Research Assistant, Dr. Michael A. Langston’s lab — Aug. 2013 - July 2014<br/>
+            Graduate Research Assistant, Dr. Michael A. Langston’s lab — [Aug. 2013 ~ July 2014]<br/>
             <ul>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
                 <li>Upgraded <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built for graph theoretical tools.</li>
