--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
 
         <div>
             <strong>Oak Ridge National Laboratory</strong> - Oak Ridge, TN<br/>
-            Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center — [Oct. 2017 ~ Aug. 2019]<br/>
+            Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center - [Oct. 2017 ~ Aug. 2019]<br/>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
                 <li>Radar data classification using convolutional neural networks.</li>
                 <li>Detected outliers in streaming time series radar data.</li>
             </ul>
-            Research Intern, the Scientific Data Group — Summer 2016, 2017<br/>
+            Research Intern, the Scientific Data Group - Summer 2016, 2017<br/>
             <ul>
                 <li>Mentor: <a href="http://www.csm.ornl.gov/~ost/">Dr. George Ostrouchov</a></li>
                 <li>Developed pbdR tools for singularity container.</li>
@@ -160,13 +160,13 @@
         
         <div>
             <strong>University of Tennessee, Knoxville</strong> - Knoxville, TN<br/>
-            Graduate Research Assistant, the Office of Information Technology — [July 2014 ~ Oct. 2017]<br/>
+            Graduate Research Assistant, the Office of Information Technology - [July 2014 ~ Oct. 2017]<br/>
             <ul>
                 <li>University web server configuration and optimization.</li>
                 <li>Google Search Appliance administration and implementation.</li>
             </ul>
 
-            Graduate Research Assistant, Dr. Michael A. Langston’s lab — [Aug. 2013 ~ July 2014]<br/>
+            Graduate Research Assistant, Dr. Michael A. Langston’s lab - [Aug. 2013 ~ July 2014]<br/>
             <ul>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
                 <li>Upgraded <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built for graph theoretical tools.</li>
@@ -183,7 +183,7 @@
                         <a href="/files/ipac21.pdf" class="pub-title">Enhancing the MOGA Optimization Process at ALS-U with Machine Learning</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
-                    <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span> (2021)<br/>
+                    <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span> (2021) | 
                     <span class="pub">
                         <a href="/files/ipac21.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="https://accelconf.web.cern.ch/ipac2021/papers/mopab106.pdf"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
