--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <a href="/files/weights.pdf" class="pub-title">Clique Selection and its Effect on Paraclique Enrichment: An Experimental Study</a>
                     </strong><br/>
                     Yuping Lu, Charles A. Phillips, Elissa J. Chesler, Michael A. Langston<br/>
-                    <span class="venue"><a href="https://easychair.org/publications/volume/BICOB_2020">Proceedings of the 12th International Conference on Bioinformatics and Computational Biology</a></span> (2020)<br/>
+                    <span class="venue"><a href="https://easychair.org/publications/volume/BICOB_2020">Proceedings of the 12th International Conference on Bioinformatics and Computational Biology</a></span> (2020) | 
                     <span class="pub">
                         <a href="/files/weights.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="https://easychair.org/publications/paper/mDZB"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -209,7 +209,7 @@
                         <a href="/files/icdmw2019.pdf" class="pub-title">Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars</a>
                     </strong><br/>
                     Yuping Lu, Jitendra Kumar<br/>
-                    <span class="venue"><a href="https://ieeexplore.ieee.org/xpl/conhome/8949436/proceeding">Proceedings of the 2019 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2019)<br/>
+                    <span class="venue"><a href="https://ieeexplore.ieee.org/xpl/conhome/8949436/proceeding">Proceedings of the 2019 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2019) | 
                     <span class="pub">
                         <a href="/files/icdmw2019.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="https://ieeexplore.ieee.org/document/8955644"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -222,7 +222,7 @@
                         <a href="/files/icdmw2018.pdf" class="pub-title">Detecting Outliers in Streaming Time Series Data from ARM Distributed Sensors</a>
                     </strong><br/>
                     Yuping Lu, Jitendra Kumar, Nathan Collier, Bhargavi Krishna, Michael A. Langston<br/>
-                    <span class="venue"><a href="https://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8626049">Proceedings of the 2018 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2018)<br/>
+                    <span class="venue"><a href="https://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8626049">Proceedings of the 2018 IEEE International Conference on Data Mining Workshops</a></span> (ICDMW 2018) | 
                     <span class="pub">
                         <a href="/files/icdmw2018.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="https://ieeexplore.ieee.org/document/8637541"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -239,7 +239,7 @@
                         <a href="#" class="pub-title">Demonstration of Machine Learning-enhanced Multiobjective Optimization of Ultrahigh-brightness Lattices for Fourth-generation Synchrotron Light Sources</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Hiroshi Nishimura, Marco Venturini, Thorsten Hellert<br/>
-                    <span class="venue"><a href="https://www.sciencedirect.com/science/article/pii/S0168900223001821">Nuclear Inst. and Methods in Physics Research, A</a></span> — (2023): 168192 doi:10.1016/j.nima.2023.168192<br/>
+                    <span class="venue"><a href="https://www.sciencedirect.com/science/article/pii/S0168900223001821">Nuclear Inst. and Methods in Physics Research, A</a></span> — (2023): 168192 doi:10.1016/j.nima.2023.168192 | 
                     <span class="pub">
                         <a href="/files/als2023.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="https://www.sciencedirect.com/science/article/pii/S0168900223001821"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -252,7 +252,7 @@
                         <a href="/files/biclique.pdf" class="pub-title">Biclique: Maximal Biclique Enumeration in Bipartite Graphs</a>
                     </strong><br/>
                     Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-                    <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — 13, 88 (2020) doi:10.1186/s13104-020-04955-0<br/>
+                    <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — 13, 88 (2020) doi:10.1186/s13104-020-04955-0 | 
                     <span class="pub">
                         <a href="/files/biclique.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="https://bmcresnotes.biomedcentral.com/articles/10.1186/s13104-020-04955-0"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -265,7 +265,7 @@
                         <a href="/files/robust.pdf" class="pub-title">A Robustness Metric for Biological Data Clustering Algorithms</a>
                     </strong><br/>
                     Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-                    <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 20, 503 (2019) doi:10.1186/s12859-019-3089-6<br/>
+                    <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 20, 503 (2019) doi:10.1186/s12859-019-3089-6 | 
                     <span class="pub">
                         <a href="/files/robust.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-019-3089-6"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -278,7 +278,7 @@
                         <a href="/files/mpmi-05-11-0106.pdf" class="pub-title">Digital Gene Expression Profiling of the Phytophthora Sojae Transcriptome</a>
                     </strong><br/>
                     Wenwu Ye, Xiaoli Wang, Kai Tao, Yuping Lu, Tingting Dai, Suomeng Dong, Daolong Dou, Mark Gijzen, Yuanchao Wang<br/>
-                    <span class="venue"><a href="http://apsjournals.apsnet.org/loi/mpmi">Molecular Plant-Microbe Interactions</a></span> — 24(12):1530–1539, December 2011<br/>
+                    <span class="venue"><a href="http://apsjournals.apsnet.org/loi/mpmi">Molecular Plant-Microbe Interactions</a></span> — 24(12):1530–1539, December 2011 | 
                     <span class="pub">
                         <a href="/files/mpmi-05-11-0106.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="http://apsjournals.apsnet.org/doi/abs/10.1094/MPMI-05-11-0106"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -296,7 +296,7 @@
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
                     <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span>
-                    — Campinas, Brazil, May 24, 2021<br/>
+                    — Campinas, Brazil, May 24, 2021 | 
                     <span class="pub">
                         <a href="/files/ipac_21_poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
                     </span>
@@ -309,7 +309,7 @@
                     </strong><br/>
                     Yuping Lu, Changchun Sun, and Simon C. Leemann<br/>
                     <span class="venue"><a href="https://als.lbl.gov/2020-user-meeting-agenda/">ALS User Meeting 2020</a></span>
-                    — Berkeley, California, August 25, 2020<br/>
+                    — Berkeley, California, August 25, 2020 | 
                     <span class="pub">
                         <a href="/files/user_meeting_20_poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
                     </span>
@@ -322,7 +322,7 @@
                     </strong><br/>
                     Charles Nathan Melton, Yuping Lu, Shuai Liu, Hiroshi Nishimura, Matthew Marcus, Changchun Sun, Alexander Hexemer, Simon C. Leemann<br/>
                     <span class="venue"><a href="https://als.exposure.co/2019-als-user-meeting">ALS User Meeting 2019</a></span>
-                    — Berkeley, California, October 1, 2019<br/>
+                    — Berkeley, California, October 1, 2019 | 
                     <span class="pub">
                         <a href="/files/user_meeting_19_poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
                     </span>
@@ -335,7 +335,7 @@
                     </strong><br/>
                     Yuping Lu, Jitendra Kumar<br/>
                     <span class="venue"><a href="https://www.orau.gov/2019armasr/">2019 ARM/ASR PI Meeting</a></span>
-                    — Rockville, MD, June 11, 2019<br/>
+                    — Rockville, MD, June 11, 2019 | 
                     <span class="pub">
                         <a href="/files/PI2019poster.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
                     </span>
@@ -347,7 +347,7 @@
                         <a href="/files/bio2016.pdf" class="pub-title">Enrichment vs Robustness: A Comparison of Transcriptomic Data Clustering Metrics</a>
                     </strong><br/>
                     Yuping Lu, Charles A Phillips, Michael A Langston<br/>
-                    <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 17(Suppl 10):P10, August 2016<br/>
+                    <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 17(Suppl 10):P10, August 2016 | 
                     <span class="pub">
                         <a href="/files/bio2016.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
                         <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-016-1154-y"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
@@ -363,7 +363,7 @@
                     <strong>
                         <a href="https://www.orau.gov/2019armasr/" class="pub-title">Deep Convolutional Neural Networks for Hydrometeor Classification using Dual Polarization Doppler Radars</a>
                     </strong><br/>
-                    2019 ARM/ASR PI Meeting, Rockville, MD, June 10, 2019<br/>
+                    2019 ARM/ASR PI Meeting, Rockville, MD, June 10, 2019 | 
                     <span class="pub">
                         <a href="/files/PI2019.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
                     </span>
@@ -374,7 +374,7 @@
                     <strong>
                         <a href="/files/isbra2018proceedings.pdf" class="pub-title">A Robustness Metric for Biological Data Clustering Algorithms</a>
                     </strong><br/>
-                    ISBRA 2018, Beijing, China, June 10, 2018<br/>
+                    ISBRA 2018, Beijing, China, June 10, 2018 | 
                     <span class="pub">
                         <a href="/files/robustness.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
                     </span>
@@ -385,7 +385,7 @@
                     <strong>
                         <a href="/files/ARM-yl.pdf" class="pub-title">Outlier Detection for SGPMET Data</a>
                     </strong><br/>
-                    Oak Ridge National Laboratory, April 04, 2018<br/>
+                    Oak Ridge National Laboratory, April 04, 2018 | 
                     <span class="pub">
                         <a href="/files/ARM-yl.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
                     </span>
@@ -399,7 +399,7 @@
                 <div class="pub">
                     <strong>
                         <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112" class="pub-title">Reviewer, Computational Biology and Bioinformatics, 2020-2022.</a>
-                    </strong><br/>
+                    </strong> | 
                     <span class="pub">
                         <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
                     </span>
@@ -409,7 +409,7 @@
                 <div class="pub">
                     <strong>
                         <a href="/files/FAW2015.pdf" class="pub-title">Reviewer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.</a>
-                    </strong><br/>
+                    </strong> | 
                     <span class="pub">
                         <a href="/files/FAW2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
                         <a href="https://link.springer.com/book/10.1007/978-3-319-19647-3"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
@@ -420,7 +420,7 @@
                 <div class="pub">
                     <strong>
                         <a href="/files/WALCOM2015.pdf" class="pub-title">Reviewer, 9th International Workshop on Algorithms and Computation, WALCOM 2015.</a>
-                    </strong><br/>
+                    </strong> | 
                     <span class="pub">
                         <a href="/files/WALCOM2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
                         <a href="https://link.springer.com/book/10.1007%2F978-3-319-15612-5"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
@@ -435,7 +435,7 @@
                 <div class="pub">
                     <strong>
                         <a href="https://www.xsede.org/" class="pub-title">XSEDE14 : Atlanta, GA, USA. July 13-18, 2014</a>
-                    </strong><br/>
+                    </strong> | 
                     <span class="pub">
                         <a href="https://www.xsede.org/"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
                     </span>
