--- a/index.html
+++ b/index.html
@@ -397,9 +397,7 @@
         <ul>
             <li>
                 <div class="pub">
-                    <strong>
-                        <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112" class="pub-title">Reviewer, Computational Biology and Bioinformatics, 2020-2022.</a>
-                    </strong> | 
+                    <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112" class="pub-title">Reviewer, Computational Biology and Bioinformatics, 2020-2022.</a> | 
                     <span class="pub">
                         <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
                     </span>
@@ -407,9 +405,7 @@
               </li>
               <li>
                 <div class="pub">
-                    <strong>
-                        <a href="/files/FAW2015.pdf" class="pub-title">Reviewer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.</a>
-                    </strong> | 
+                    <a href="/files/FAW2015.pdf" class="pub-title">Reviewer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.</a> | 
                     <span class="pub">
                         <a href="/files/FAW2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
                         <a href="https://link.springer.com/book/10.1007/978-3-319-19647-3"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
@@ -418,9 +414,7 @@
               </li>
               <li>
                 <div class="pub">
-                    <strong>
-                        <a href="/files/WALCOM2015.pdf" class="pub-title">Reviewer, 9th International Workshop on Algorithms and Computation, WALCOM 2015.</a>
-                    </strong> | 
+                    <a href="/files/WALCOM2015.pdf" class="pub-title">Reviewer, 9th International Workshop on Algorithms and Computation, WALCOM 2015.</a> | 
                     <span class="pub">
                         <a href="/files/WALCOM2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
                         <a href="https://link.springer.com/book/10.1007%2F978-3-319-15612-5"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
@@ -433,9 +427,7 @@
         <ul>
             <li>
                 <div class="pub">
-                    <strong>
-                        <a href="https://www.xsede.org/" class="pub-title">XSEDE14 : Atlanta, GA, USA. July 13-18, 2014</a>
-                    </strong> | 
+                    <a href="https://www.xsede.org/" class="pub-title">XSEDE14 : Atlanta, GA, USA. July 13-18, 2014</a> | 
                     <span class="pub">
                         <a href="https://www.xsede.org/"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
                     </span>
