--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 <li class="nav-item">
                     <a class="nav-link " href="http://twitter.com/YupingLu"><i class="fa fa-twitter"></i></a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link " href="https://www.linkedin.com/in/yupinglu/"><i class="fa fa-linkedin"></i></a>
+                </li>
             </ul>
             <h2><a class="black" href="/">Yuping Lu</a></h2>
         </div>
@@ -64,6 +68,7 @@
             <a href="mailto:yupinglu89@gmail.com"><i class="fa fa-envelope-o"></i> yupinglu89@gmail.com</a> |
             <a href="https://github.com/YupingLu"><i class="fa fa-github"></i> YupingLu</a> |
             <a href="https://twitter.com/YupingLu"><i class="fa fa-twitter"></i> @YupingLu</a> |
+            <a href="https://www.linkedin.com/in/yupinglu/"><i class="fa fa-linkedin"></i> yupinglu</a> |
             <a href="http://yupinglu.me/dissertation/">Dissertation</a>
         </p>
 
@@ -436,7 +441,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-04-20</p>
+            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-04-21</p>
         </div>
     </div>
 
