Add John Rose's link

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <strong>University of Tennessee, Knoxville</strong> - Knoxville, TN<br/>
             Graduate Research Assistant, the Office of Information Technology - [July 2014 ~ Oct. 2017]<br/>
             <ul>
+                <li>Supervisor: <a href="https://www.linkedin.com/in/john-rose-50743942">Mr. John B. Rose</a></li>
                 <li>University web server configuration and optimization.</li>
                 <li>Google Search Appliance administration and implementation.</li>
             </ul>
