Add linkedin link to dissertation page

--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -71,6 +71,11 @@
           </a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link " href="https://www.linkedin.com/in/yupinglu/">
+            <i class="fa fa-linkedin"></i>
+          </a>
+        </li>
       </ul>
       <h2><a class="black" href="/">Yuping Lu</a></h2>
     </div>
@@ -79,6 +84,7 @@
       <a href="mailto:yupinglu89@gmail.com"><i class="fa fa-envelope-o"></i> yupinglu89@gmail.com</a> |
       <a href="https://github.com/YupingLu"><i class="fa fa-github"></i> YupingLu</a> |
       <a href="https://twitter.com/YupingLu"><i class="fa fa-twitter"></i> @YupingLu</a> |
+      <a href="https://www.linkedin.com/in/yupinglu/"><i class="fa fa-linkedin"></i> yupinglu</a> |
       <a href="http://yupinglu.me/dissertation/">Dissertation</a>
     </p>
 
