--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
         </div>
 
         <div>
-            <strong>Oak Ridge National Laboratory</strong> - Oak Ridge, TN<br/>
-            Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center - [Oct. 2017 ~ Aug. 2019]<br/>
+            <strong>Oak Ridge National Laboratory</strong> - Oak Ridge, TN [Oct. 2017 ~ Aug. 2019]<br/>
+            Graduate Research Assistant, the Atmospheric Radiation Measurement (ARM) Data Center<br/>
             <ul>
                 <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Dr. Jitendra Kumar</a></li>
                 <li>Radar data classification using convolutional neural networks.</li>
@@ -164,7 +164,7 @@
         </div>
         
         <div>
-            <strong>University of Tennessee, Knoxville</strong> - Knoxville, TN<br/>
+            <strong>University of Tennessee, Knoxville</strong> - Knoxville, TN [Aug. 2013 ~ Oct. 2017]<br/>
             Graduate Research Assistant, the Office of Information Technology - [July 2014 ~ Oct. 2017]<br/>
             <ul>
                 <li>Supervisor: <a href="https://www.linkedin.com/in/john-rose-50743942">Mr. John B. Rose</a></li>
@@ -442,7 +442,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-04-21</p>
+            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-04-22</p>
         </div>
     </div>
 
