--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
 
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
-            <strong>Data Scientist at Walmart Global Tech</strong> - Dallas, TX [Mar. 2024 ~ present]<br/>
+            <strong>Data Scientist at Walmart Global Tech</strong> - Rogers, AR [Mar. 2024 ~ present]<br/>
             <ul>
                 <li>Implemented parallel framework for daily forecasting.</li>
+                <li>Created end-to-end data pipelines for daily forecasting.</li>
             </ul>
         </div>
 
@@ -458,7 +459,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-04-22</p>
+            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-08-27</p>
         </div>
     </div>
 
